@@ -1,3 +1,8 @@
+2009-03-25  Donal K. Fellows  <dkf@users.sf.net>
+
+	* win/wish.exe.manifest.in: [Bug 1871101]: Add magic to make Tk not be
+	blurred on Vista with large fonts.
+
 2009-03-03  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* generic/tkFileFilter.c: Backported some fixes for uninitialized
